# musac

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  run_integration_tests.sh
backends/src/sdl2/: CMakeLists.txt  sdl2.hh  sdl2_audio_stream.cc  sdl2_audio_stream.hh  sdl2_backend_factory.cc  sdl2_backend_impl.cc  sdl2_backend_impl.hh
backends/src/sdl3/: CMakeLists.txt  sdl3.hh  sdl3_audio_stream.cc  sdl3_audio_stream.hh  sdl3_backend_factory.cc  sdl3_backend_impl.cc  sdl3_backend_impl.hh
benchmarks/: CMakeLists.txt  benchmark_helpers.hh  benchmark_main.cc  standalone_audio_callback_benchmark.cc
benchmarks/core/: benchmark_audio_callback.cc  benchmark_callback_performance.cc  benchmark_lock_contention.cc  benchmark_mixer_operations.cc  benchmark_stream_operations.cc
benchmarks/threading/: benchmark_phase1_destruction.cc  benchmark_phase2_locking.cc
bindings/: CMakeLists.txt
bindings/java/: CMakeLists.txt  DISTRIBUTION.md  build.gradle  build_jar.sh  settings.gradle
bindings/java/android/: CMakeLists.txt  README.md  build.gradle  build_android.sh  create_mock_aar.sh  gradle.properties  local.properties.example  musac-android-1.0.aar  settings.gradle  standalone_build.sh
bindings/java/core/: build.gradle
bindings/java/desktop/: build.gradle
bindings/java/gdx_demo/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  CMakeLists_full.txt  README.md  build.bat  build.gradle  build.sh  gradle.properties
bindings/java/gwt/: build.gradle
bindings/java/ios/: build.gradle
bindings/java/native/: CMakeLists.txt  jni_audio_format.cc  jni_audio_format.h  jni_common.h  jni_decoder.cc  jni_io_stream.cc  jni_io_stream.h
bindings/java/test/: TestDecoder.java  TestPhase2.java
bindings/java/web/: CMakeLists.txt  Musac.gwt.xml  README.md  build_wasm.sh
example/: 01_play_file.cc  02_volume_control.cc  03_looping.cc  04_pc_speaker.cc  05_device_enumeration.cc  CMakeLists.txt  example.cc  example_common.hh  imgui_player.cc  loader.cc  loader.hh  musac_example.cc  pc_speaker_example.cc  test_mml_decoder.cc
example/data/: hmp_example.h  opb_example.h
example/imgui_player/: CMakeLists.txt  README.md  audio_device_manager.cc  audio_device_manager.hh  imgui_player.cc  imgui_player.hh  main.cc  player_ui.cc  player_ui.hh  stream_manager.cc  stream_manager.hh  waveform_visualizer.cc  waveform_visualizer.hh
ext/sdl3/: CMakeLists.txt
src/musac/: CMakeLists.txt  audio_backend_factory.cc  audio_device.cc  audio_loader.cc  audio_mixer.cc  audio_mixer.hh  audio_source.cc  audio_system.cc  callback_dispatcher.cc  callback_dispatcher.hh  device_guard.hh  fade_envelop.cc  fade_envelop.hh  in_use_guard.cc  in_use_guard.hh  lock.hh  mixer_snapshot.hh  mutex.cc  mutex.hh  pc_speaker_decoder.cc  pc_speaker_decoder.hh  pc_speaker_stream.cc  stream.cc  stream_container.hh  test_exports.hh  test_internal.hh
src/musac/codecs/: CMakeLists.txt  decoder_8svx.cc  decoder_aiff.cc  decoder_aiff_v2.cc  decoder_aiff_v3.cc  decoder_cmf.cc  decoder_drflac.cc  decoder_drmp3.cc  decoder_drwav.cc  decoder_mml.cc  decoder_modplug.cc  decoder_opb.cc  decoder_seq.cc  decoder_vgm.cc  decoder_voc.cc  decoder_vorbis.cc  register_codecs.cc
src/musac/resampler/: resampler_sdl.cc  resampler_sdl.hh  resampler_speex.cc  resampler_speex.hh
src/musac/sdk/: CMakeLists.txt  audio_converter.cc  audio_converter_internal.cc  audio_converter_v2.cc  audio_format.cc  decoder.cc  decoders_registry.cc  from_float_converter.cc  io_stream.cc  mml_parser.cc  musac_sdk_config.h.in  proc_decoder.cc  processor.cc  resampler.cc  samples_converter.cc
test_data/: CMakeLists.txt
test_data/data/: cmf_example.h  mid_example.h  mml_bouree.h  mml_complex.h  mp3_example.h  s3m_example.h  voc_example.h  xmi_example.h
test_data/src/: loader.cc
tools/: CMakeLists.txt  generate_test_data.cc
unittest/: CMakeLists.txt  README.md  TESTING_GUIDELINES.md  TESTING_STRATEGY.md  backend_selection.hh  compile_test_backend_v2.cc  mock_backends.hh  mock_components.hh  test_audio_device_v2.cc  test_audio_system_v2.cc  test_backend_v2_interface.cc  test_fixtures.hh  test_helpers.hh  test_helpers_v2.hh  test_main.cc  test_sdl3_backend_v2.cc
unittest/codecs/: test_cmf_data.h  test_decoder_aiff.cc  test_decoder_voc.cc  test_decoder_wav.cc  test_decoders_with_golden_data.cc  test_decoders_with_golden_data_synth.cc  test_mid_data.h  test_voc_data.h  voc_test_data.h  voc_test_data_full.h
unittest/core/: test_audio_device.cc  test_audio_stream.cc  test_audio_system_api.cc  test_buffer_shrinking.cc  test_cleanup.cc  test_device_cleanup.cc  test_device_switching.cc  test_endian.cc  test_internal_mixer_safety.cc  test_io_stream.cc  test_mixer_public_api.cc  test_mixer_simple.cc  test_phase1_thread_safety.cc  test_phase4_sdl_callback_safety.cc  test_phase5_integration.cc  test_sdl_shutdown_order.cc  test_stream_move.cc  test_thread_safety.cc
unittest/integration/backends/: compile_test_backend.cc  compile_test_backend_v2.cc  test_backend_interface.cc  test_backend_v2_interface.cc  test_sdl3_backend.cc  test_sdl3_backend_v2.cc
unittest/integration/codecs/: test_aiff_data.h  test_decoder_8svx.cc  test_decoder_aiff.cc  test_decoder_aiff_golden.cc  test_decoder_aiff_v2.cc  test_decoder_voc.cc  test_decoder_voc_golden.cc  test_decoder_wav.cc  test_decoders_with_golden_data.cc  test_decoders_with_golden_data_synth.cc  test_mus_data.h  test_opb_data.h  test_wav_data.h  test_xmi_data.h
unittest/integration/core/: test_audio_device.cc  test_audio_device_v2.cc  test_audio_format.cc  test_audio_stream.cc  test_audio_system.cc  test_audio_system_api.cc  test_audio_system_v2.cc  test_buffer_shrinking.cc  test_cleanup.cc  test_device_cleanup.cc  test_device_switching.cc  test_internal_mixer_safety.cc  test_memory.cc  test_mixer_public_api.cc  test_mixer_simple.cc  test_mute_integration.cc  test_phase1_thread_safety.cc  test_phase4_sdl_callback_safety.cc  test_phase5_integration.cc  test_sdl_shutdown_order.cc  test_stream_move.cc  test_thread_safety.cc  test_types.cc  (+1 more)
unittest/sdk/: test_audio_converter.cc  test_decoder_base.cc  test_samples_converter.cc
(+376 files in other folders)
